Update existing docs/ links and add redirects which are limited in power so I listed all the prior pages in docs/redirect.html using the jekyll-redirect-from plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="description" content="DynamoRIO Dynamic Instrumentation Tool Platform">
   <meta name="keywords" content="DynamoRIO Dynamic Instrumentation Tool Platform">
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
   <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
   <title>{{ page.title }}</title>
 </head>
@@ -17,7 +17,7 @@
 
     <tr>
     <td colspan=2 width=100% align=center class="medbg">
-      <img width=450 src="images/toplogo.png" alt="DynamoRIO">
+      <img width=450 src="/images/toplogo.png" alt="DynamoRIO">
     </td>
     </tr>
 
