--- a/style.scss
+++ b/style.scss
@@ -3,32 +3,128 @@ layout: null
 sitemap: false
 ---
 
-body, td, p, div { color: #000000; font-family: Arial, Helvetica,
-  sans-serif; }
+$sidebar-width: 275px;
+$topbar-height: 155px;
+$topmenu-trigger-width: 750px;
 
-h1, h2, h3 { color: #000000; font-family: Arial, Helvetica,
-  sans-serif; }
+body, td, p, div {
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-table.master { background-image:url('images/circuits.png'); }
+body {
+    padding: 0 0 0 $sidebar-width;
+    @media (max-width: $topmenu-trigger-width) {
+        padding: $topbar-height 0 0 0;
+        overflow: hidden;
+    }
+}
+
+.medbg {
+    background: #8ea0d2;
+}
+
+.ltbg, a.curpage {
+    background: white;
+}
+
+.full-height {
+    margin: 0em 0em 0em 0em;
+    height: 100%;
+}
+
+header.sidebar {
+    margin: 0em 0em 0em 0em;
+    white-space: nowrap;
+    position: absolute;
+    width: $sidebar-width;
+    height: 100vh;
+    overflow-x: hidden;
+    left: 0px;
+    @media (max-width: $topmenu-trigger-width) {
+        top: 0px;
+        height: $topbar-height;
+        width: 100vw;
+        overflow-x: visible;
+    }
+}
+
+.sepscroll { overflow-y: scroll; }
+
+h1, h2, h3 {
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.content { margin: 1em 1em 1em 1em; }
 
 p.margins { margin: 0.5em 0.5em 0.5em 0.5em; }
 
-p.sidebar { margin: 1em 0.8em 0em 0.8em; white-space: nowrap; }
-
-div.content { margin: 1em 1em 2em 1em; }
-
-.logo { color: #000000; 
-   text-decoration: none; font-size: 120%; margin: 0em 0em 0.3em 0em; }
-
-table.medbg, td.medbg, tr.medbg, body.medbg {
-  background:rgb(110,110,190);
-  background:rgba(150,150,220,0.8); }
-
-/* must be on direct child of the table w/ the image */
-td.content, a.curpage {
-  background:rgb(235,235,255);
-  background:rgba(235,235,255,0.9); }
-table.ltbg, td.ltbg, tr.ltbg { }
+div.logo {
+    text-align: center;
+    @media (max-width: $topmenu-trigger-width) {
+        text-align: left;
+        display: inline-block;
+    }
+}
+img.logo {
+    width: 250px;
+    height: 242px;
+    text-align: center;
+    @media (max-width: $topmenu-trigger-width) {
+        width: 155px;
+        height: 150px;
+    }
+}
+div.subtitle {
+    color: #000000; 
+    text-decoration: none;
+    font-size: 90%;
+    margin: auto;
+    text-align: center;
+    font-style: italic;
+    @media (max-width: $topmenu-trigger-width) {
+        font-size: 80%;
+        display: inline-block;
+        width: 150px;
+        height: 5px;
+        position: absolute;
+        top: 5px;
+        left: 160px;
+    }
+}
+div.menus {
+    margin: 1em 1em 1em 1.5em;
+    @media (max-width: $topmenu-trigger-width) {
+        position: absolute;
+        top: 100px;
+        left: 130px;
+        z-index: 2;
+        background: #8ea0d2;
+        padding: 15px;
+    }
+}
+@media (max-width: $topmenu-trigger-width) {
+    div.menus.mobile-invisible>* { visibility: hidden; }
+}
+.hamburger {
+    display: none;
+    @media (max-width: $topmenu-trigger-width) {
+//        position: absolute;
+  //      top: 15px;
+        //    left: 120px;
+        margin: 5px 10px 25px 10px;
+        display: inline-block;
+        text-align: center;
+    }
+}
+div.bar {
+    width: 150px;
+    height: 15px;
+    background-color: black;
+    margin: 10px 5px 5px 5px;
+    display: block;
+}
 
 ol.h2list { font-size: 140%; font-weight: bold; }
 li span { font-size: 71%; font-weight: normal; }
@@ -37,6 +133,55 @@ a {color: #4444cc; font-family: Arial, Helvetica, sans-serif;
    text-decoration: underline; padding: 0px; }
 a:visited {color: #7722cc; }
 a:hover {color: #880000; }
+
+.expand-arrow:before {
+    display: block;
+    content: "";
+    margin: -.25em 0 0 -.4em;
+
+    width: .5em;
+    height: .5em;
+    border-right: .15em solid #3f4657;
+    border-top: .15em solid #3f4657;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transition-duration: .3s;
+    transition-duration: .3s;
+}
+
+.expand-arrow {
+    display: inline-block;
+    visibility: hidden;
+    position: relative;
+    width: 12px;
+    line-height: 1.5;
+    cursor: pointer;
+}
+
+.curmenu:before, .curmenu i:before {
+    margin-left: -.25em;
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+
+.submenu {
+    display: none;
+}
+.curmenu, .curmenu a {
+    display: initial;
+}
+.curmenu.expand-arrow {
+    display: inline-block;
+}
+
+.has-children {
+    visibility: visible;
+}
+.mobile-invisible {
+    @media (max-width: $topmenu-trigger-width) {
+        visibility: hidden;
+    }
+}
 
 @media all and (max-width:640px) { a { padding: 5px 10px; } }
 
@@ -50,10 +195,18 @@ a:hover {color: #880000; }
 // IE requires this, while Mozilla uses .submenu a color
 .submenu img {border-color: #000000; }
 
-.submenu a {color: #000000; font-family: Arial, Helvetica, sans-serif;
-   text-decoration: none; font-size: 85%; }
+.submenu a {
+    color: #000000;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: 90%;
+    margin-left: 3em;
+    @media (max-width: $topmenu-trigger-width) {
+        margin-left: 4em;
+    }
+}
 .submenu a:visited {color: #000000; font-family: Arial, Helvetica, sans-serif;
-   text-decoration: none; font-size: 85%; }
+   text-decoration: none; font-size: 90%; }
 .submenu a:hover {color: #880000; }
 
 .adkblue a {color: #000080; font-family: Arial, Helvetica, sans-serif;
