Add viewport tag for mobile layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="description" content="DynamoRIO Dynamic Instrumentation Tool Platform">
   <meta name="keywords" content="DynamoRIO Dynamic Instrumentation Tool Platform">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
   <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
   <title>{{ page.title }}</title>
