--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 <body class="full-height">
   <!--------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------->
-  <header class="sidebar medbg full-height">
+  <header class="sidebar medbg">
     <div class="logo">
       <img class="logo" src="/images/drmemory.png" alt="DynamoRIO">
     </div>
@@ -102,8 +102,8 @@
     </div>
   </header>
 
-  <section class="full-height sepscroll">
-    <div class="content full-height">
+  <section class="content">
+    <div class="content">
     <!-- ###################################################################### -->
 
       {{ content }}
