--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
       <img class="logo" src="/images/drmemory.png" alt="DynamoRIO">
     </div>
     <div class="subtitle">Dynamic Instrumentation Tool Platform</div>
+    <div class="mobile-title">DynamoRIO</div>
 
     <div class="hamburger">
       <a class="hamburger" onclick='return show_menu();' href="">
