New logo with name on it; preliminary attempt at elephant favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,10 +47,9 @@
   <!--------------------------------------------------------------------------------->
   <header class="sidebar medbg">
     <div class="logo">
-      <img class="logo" src="/images/drmemory.png" alt="DynamoRIO">
+      <img class="logo" src="/images/DynamoRIO-logo.png" alt="DynamoRIO logo">
     </div>
     <div class="subtitle">Dynamic Instrumentation Tool Platform</div>
-    <div class="mobile-title">DynamoRIO</div>
 
     <div class="hamburger">
       <a class="hamburger" onclick='return show_menu();' href="">
