Use modern icon rel header for the multiple sizes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
   <meta name="description" content="DynamoRIO Dynamic Instrumentation Tool Platform">
   <meta name="keywords" content="DynamoRIO Dynamic Instrumentation Tool Platform">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+  <link rel="icon" href="/favicon.ico" sizes="16x16 32x32 64x64"
+        type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
   <title>{{ page.title }}</title>
 
