--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,11 @@
       </a>
     </div>
 
+    <form id="search-form" action="/search" method="get">
+      <input type="text" name="query" id="search-input" placeholder="Search">
+      <input type="submit" value="Search" style="display: none;">
+    </form>
+
     <div id="nav-tree" class="menus medbg noxscroll mobile-invisible mobile-toggle">
       <div id="nav-tree-contents" class="medbg noxscroll mobile-invisible mobile-toggle">
       </div>
