--- a/style.scss
+++ b/style.scss
@@ -293,3 +293,21 @@ a.anchor a:hover {color: #000080; font-family: Arial, Helvetica, sans-serif;
    text-decoration: none; }
 
 form {margin-bottom: 0px;}
+
+#search-input {
+    display: block;
+    margin: auto;
+    margin-top: 1em;
+    @media (max-width: $topmenu-trigger-width) {
+        display: inline-block;
+        margin-top: 0em;
+    }
+}
+
+#search-form {
+    @media (max-width: $topmenu-trigger-width) {
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 75px;
+    }
+}
