Nav bar cleanup: rm arrow; mobile search; greener
Cleans up the nav bar by removing the synch double-arrow (and just
always synchronizing the menus).
Tweaks the color to be a litle more green.
Moves the search box to be part of the menu, so it's visible on a
narrow mobile screen.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,12 +72,12 @@
       </a>
     </div>
 
-    <form id="search-form" action="/search" method="get">
-      <input type="text" name="query" id="search-input" placeholder="Search">
-      <input type="submit" value="Search" style="display: none;">
-    </form>
-
     <div id="nav-tree" class="menus medbg noxscroll mobile-invisible mobile-toggle">
+      <form id="search-form" class="medbg" action="/search" method="get">
+        <input type="text" name="query" id="search-input" class="medbg"
+               placeholder="Search">
+        <input type="submit" value="Search" style="display: none;">
+      </form>
       <div id="nav-tree-contents" class="medbg noxscroll mobile-invisible mobile-toggle">
       </div>
       <div id="nav-sync" class="medbg sync noxscroll mobile-invisible mobile-toggle">
