i#4111 web: Add Debugging wiki page as example
Adds the Debugging wiki page with menu items for each section to
illustrate what integrating the wiki might look like.

Tweaks the code style to be more clearly delineated.

Fixes the menu highlight code to not strip the path from the URL.

Issue: #4111

--- a/style.scss
+++ b/style.scss
@@ -304,3 +304,13 @@ form {margin-bottom: 0px;}
     // We decided we don't want to show the double-array and to always sync the menu.
     display: none;
 }
+
+div.highlight {
+  background-color: #eeeeee;
+  padding-left: 15px;
+  padding-right: 15px;
+  border: 2px;
+  border-style: solid;
+  border-color: #cccccc;
+  overflow: auto;
+}
