--- a/style.scss
+++ b/style.scss
@@ -157,10 +157,10 @@ div.bar {
 }
 
 ol.h2list { font-size: 140%; font-weight: bold; }
-li span { font-size: 71%; font-weight: normal; }
 
 a {color: #4444cc; font-family: Arial, Helvetica, sans-serif;
    text-decoration: underline; padding: 0px; }
+a.code { font-family: monospace, fixed; }
 a:visited {color: #7722cc; }
 a:hover {color: #880000; }
 
